--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
   <groupId>com.neurosdk2</groupId>
   <artifactId>neurosdk2</artifactId>
   <version>1.0.3.1</version>
+  <packaging>aar</packaging>
   <dependencies>
     <dependency>
       <groupId>androidx.appcompat</groupId>
@@ -17,8 +18,8 @@
     </dependency>
     <dependency>
       <groupId>com.google.android.gms</groupId>
-      <artifactId>gms</artifactId>
-      <version>21.0.0</version>
+      <artifactId>play-services-location</artifactId>
+      <version>21.0.1</version>
     </dependency>
   </dependencies>
 </project>
