--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,3 +1,3 @@
 install: 
   - FILE="-Dfile=neurosdk2-1.0.3.1.aar" 
-  - mvn install:install-file $FILE -DgroupId=com.neurosdk2 -DartifactId=neurosdk2 -Dversion=1.0.3.1 -Dpackaging=aar -DpomFile=pom.xml
+  - mvn install:install-file $FILE -DgroupId=com.neurosdk2 -DartifactId=neurosdk2 -Dversion=1.0.3.1 -Dpackaging=aar -DgeneratePom=true
